--- a/templates/chiefguests.html
+++ b/templates/chiefguests.html
@@ -16,7 +16,7 @@
         {% include 'navbar.html' %}
 
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-            <div><h1 style="font-weight:900;" class="text-white">CHIEF GUESTS</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center">CHIEF GUESTS</h1></div>
 
         </div>
 
