--- a/templates/nacommittee.html
+++ b/templates/nacommittee.html
@@ -28,7 +28,7 @@
   ,#0083b0);">
     <img src="static/images/murali.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
     <br><br>
-    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Murali Matcha</h1><hr class="bg-light">
+    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. M . Murali Matcha</h1><hr class="bg-light">
     <h3 style="font-size:18px">Associate Professor, </h3>
     <h3 style="font-size:18px">Department of Electrical Engineering,</h3>
     <h3 style="font-size:18px">Medicaps University,</h3>
